--- a/Core01/Client.Mvc/Client.Mvc.csproj
+++ b/Core01/Client.Mvc/Client.Mvc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ext.NET" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
