--- a/Core01/Client.Mvc/config.json
+++ b/Core01/Client.Mvc/config.json
@@ -7,5 +7,14 @@
     "RESKConnection": "renowation_web_resk",
     "NESKConnection": "renowation_web_nesk",
     "UsersContext": "Users database"
+  },
+  "languages": [
+    "English",
+    "German",
+    "Spanish"
+  ],
+  "company": {
+    "title": "Microsoft",
+    "country": "USA"
   }
 }
