--- a/Core01/Client.Mvc/appsettings.json
+++ b/Core01/Client.Mvc/appsettings.json
@@ -17,6 +17,10 @@
     "auth": {
       "ConnectionString": "Server=ROEV\\EVGEN; Database=renovation_auth_mvc; Trusted_Connection=True; MultipleActiveResultSets=true"
       //"ConnectionString": "Server=192.168.168.175; Database=renovation_auth_mvc; user id=renovation_auth;password=123; multipleactiveresultsets=True;"
+    },
+    "gos": {
+      "ConnectionString": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;"
+      //"ConnectionString": "Server=192.168.168.175; Database=renovation_auth_mvc; user id=renovation_auth;password=123; multipleactiveresultsets=True;"
     }
   }
 }
