--- a/metanit/21.Аутентификация и авторизация/Client.Mvc/Client.Mvc.csproj
+++ b/metanit/21.Аутентификация и авторизация/Client.Mvc/Client.Mvc.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.19" />
   </ItemGroup>
 
   <ItemGroup>
