--- a/metanit/22.ASP.NET Core Identity/Client.Mvc/appsettings.json
+++ b/metanit/22.ASP.NET Core Identity/Client.Mvc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Client.Mvc-AC260F93-6EEC-4A77-B464-04E15C868ADB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,21 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-
-
-  "Data": {
-    "renovation_web": {
-      "ConnectionString": "Server=ROEV\\EVGEN; Database=renovation_home; Trusted_Connection=True; MultipleActiveResultSets=True;"
-      //"ConnectionString": "Server=192.168.168.175; Database=renovation_web; user id=renovation_web;password=123; multipleactiveresultsets=True;"
-    },
-    "auth": {
-      "ConnectionString": "Server=ROEV\\EVGEN; Database=renovation_auth_mvc; Trusted_Connection=True; MultipleActiveResultSets=true"
-      //"ConnectionString": "Server=192.168.168.175; Database=renovation_auth_mvc; user id=renovation_auth;password=123; multipleactiveresultsets=True;"
-    },
-    "gos": {
-      "ConnectionString": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;"
-      //"ConnectionString": "Server=192.168.168.175; Database=renovation_auth_mvc; user id=renovation_auth;password=123; multipleactiveresultsets=True;"
-    }
-  }
+  "AllowedHosts": "*"
 }
