--- a/metanit/22.ASP.NET Core Identity/Client.Mvc/appsettings.json
+++ b/metanit/22.ASP.NET Core Identity/Client.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Client.Mvc-AC260F93-6EEC-4A77-B464-04E15C868ADB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Client.Mvc-AC260F93-6EEC-4A77-B464-04E15C868ADB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
