--- a/Postgres/Hcs.ClientMvc/Hcs.ClientMvc.csproj
+++ b/Postgres/Hcs.ClientMvc/Hcs.ClientMvc.csproj
@@ -9,8 +9,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.19" />
+
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
+    <!--<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />-->
+    <!--<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />-->
+    <!--<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />-->
+    <!--<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />-->
   </ItemGroup>
 
 </Project>
