--- a/Core01/Server.Core/Server.Core.csproj
+++ b/Core01/Server.Core/Server.Core.csproj
@@ -11,6 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="CoreModel\Data\CoreContext.cs" />
+    <Compile Remove="CoreModel\Data\CoreServ.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Ext.NET" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
