--- a/Extentions/EdmGen/EdmGen.csproj
+++ b/Extentions/EdmGen/EdmGen.csproj
@@ -23,6 +23,12 @@
 
   <ItemGroup>
     <PackageReference Include="System.CodeDom" Version="6.0.0" />
+    
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.19" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.19" />
+
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />  
   </ItemGroup>
 
 </Project>
