--- a/Extentions/EdmGen/config.json
+++ b/Extentions/EdmGen/config.json
@@ -1,8 +1,8 @@
 ﻿{
   "MsSqlConfiguration": {
-    "ConnectionString": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
+    "ConnectionString0": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
     "ConnectionString1": "Server=172.16.100.15; Database=GisHcs; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
-    "ConnectionString2": "Server=ROEV\\EVGEN; Database=renovation_home; user id=sa;password=1212; MultipleActiveResultSets=true;",
+    "ConnectionString": "Server=ROEV\\EVGEN; Database=renovation_home; user id=sa;password=1212; MultipleActiveResultSets=true;",
     "CommandTimeout": "300"
   },
   "PostgresConfiguration": {
