--- a/Core01/Client.Mvc/Client.Mvc.csproj
+++ b/Core01/Client.Mvc/Client.Mvc.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ext.NET" Version="5.3.0" />
+    <PackageReference Include="HtmlTextWriter" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <!--<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
