--- a/Core01/Client.Mvc/Client.Mvc.csproj
+++ b/Core01/Client.Mvc/Client.Mvc.csproj
@@ -33,7 +33,9 @@
     <!--<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />-->
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
-  </ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.4" />
+
+</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Server.Core\Server.Core.csproj" />
