--- a/Extentions/EdmGen/config.json
+++ b/Extentions/EdmGen/config.json
@@ -2,13 +2,14 @@
   "MsSqlConfiguration": {
     "ConnectionString0": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
     "ConnectionString1": "Server=172.16.100.15; Database=GisHcs; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
-    "ConnectionString": "Server=ROEV\\EVGEN; Database=renovation_home; user id=sa;password=1212; MultipleActiveResultSets=true;",
+    "ConnectionString2": "Server=ROEV\\EVGEN; Database=renovation_home; user id=sa;password=1212; MultipleActiveResultSets=true;",
     "ConnectionString3": "Server=192.168.168.175; Database=renovation_web; user id=renovation_web;password=123; MultipleActiveResultSets=true;",
+    "ConnectionString": "Server=vm181\\sqlexpress; Database=BB_Samara_TKO_trunk; integrated security=True; MultipleActiveResultSets=true;",
     "CommandTimeout": "300"
   },
   "PostgresConfiguration": {
     "ConnectionString": "Server=10.196.72.100; Database=gis_hcs; Port=5432; User Id=gis_hcs; Password=123456Qwerty;",
     "CommandTimeout": "300",
-    "is_postgres" : "True"
+    "is_postgres": "True"
   }
-}
+} 
