--- a/Extentions/EdmGen/config.json
+++ b/Extentions/EdmGen/config.json
@@ -3,8 +3,8 @@
     "ConnectionString0": "Server=172.16.100.15; Database=gostest3; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
     "ConnectionString1": "Server=172.16.100.15; Database=GisHcs; user id=sa;password=123456Qwerty; MultipleActiveResultSets=true;",
     "ConnectionString2": "Server=ROEV\\EVGEN; Database=renovation_home; user id=sa;password=1212; MultipleActiveResultSets=true;",
-    "ConnectionString3": "Server=192.168.168.175; Database=renovation_web; user id=renovation_web;password=123; MultipleActiveResultSets=true;",
-    "ConnectionString": "Server=vm181\\sqlexpress; Database=BB_Samara_TKO_trunk; integrated security=True; MultipleActiveResultSets=true;",
+    "ConnectionString": "Server=192.168.168.175; Database=renovation_web; user id=renovation_web;password=123; MultipleActiveResultSets=true;",
+    "ConnectionString4": "Server=vm181\\sqlexpress; Database=BB_Samara_TKO_trunk; integrated security=True; MultipleActiveResultSets=true;",
     "CommandTimeout": "300"
   },
   "PostgresConfiguration": {
